# FP_GPU

./: .pre-commit-config.yaml  README.md  pyproject.toml
playground/: qiskit_1.py  test.ipynb  test.py
src/fp_gpu/: __init__.py  matrix_product.py
src/fp_gpu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
